--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,31 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
+                    <!-- Check Test Coverage Threshold -->
+                    <execution>
+                        <phase>test</phase>
+                        <id>coverage-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>CLASS</element>
+                                    <excludes>
+                                        <exclude>org.ajay.coding.SalesTaxApplication</exclude>
+                                    </excludes>
+                                    <limits>
+                                        <limit>
+                                            <counter>METHOD</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>60%</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
