--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,13 +1,28 @@
-status = info
 name = SalesTaxLog
+property.basePath = logs
+appenders = console, rolling
 
 # Console appender configuration
 appender.console.type = Console
-appender.console.name = consoleLogger
+appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-# Root logger level
-rootLogger.level = debug
-# Root logger referring to console appender
-rootLogger.appenderRef.stdout.ref = consoleLogger
+# Rolling file configuration
+appender.rolling.type = RollingFile
+appender.rolling.name = LogFile
+appender.rolling.fileName = ${basePath}/SalesTaxesLogs.log
+appender.rolling.filePattern = ${basePath}/SalesTaxesLogs-%d{yyyy-MM-dd HH:mm:ss}-%i.log.gz
+appender.rolling.layout.type = PatternLayout
+appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.rolling.policies.type = Policies
+
+# To change log file after 1Kb size
+appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.rolling.policies.size.size=250 MB
+appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.max = 20
+
+logger.rolling.name = org.ajay.coding
+logger.rolling.level = debug
+logger.rolling.appenderRef.rolling.ref = LogFile
